# WBI-Toolbox-controllers

./: .gitignore  CMakeLists.txt  README.md
controllers/: .gitignore  basicVelocityCOMController.mdl  compareCOPandFRI.mdl  macumba.sh  macumbaCalibStandingBothFeet.sh  pathdef.m
controllers/balancingOptTau/: balancingOptTau.mdl  initBalancingOptTau.m
controllers/balancingOptTauExternalFsmForStep/: balancingOptTauExternalFsmForStep.mdl  initBalancingOptTauExternalFsmForStep.m
controllers/balancingOptTauInternalFsmForStep/: balancingController_with_OOT_and_transfer.mdl
controllers/balancingOptTauQpExtWrenches/: balancingOptTauQpExtWrenches.mdl  controllerQPsolver.m  controllerQPsolver_balancingTwoFeet.m  initBalancingOptTauQpExtWrenches.m
controllers/balancing_with_OOT_and_transfer/: balancingController_with_OOT_and_transfer.mdl  balancingController_with_OOT_and_transfer.slx  balancingController_with_OOT_and_transfer.slx.autosave  balancingController_with_OOT_and_transfer_sfun.mexa64  initBalancingController_with_OOT_and_transfer.m
controllers/balancing_with_opt_of_tau/: controller.mdl  initBalancingController_with_opt_of_tau.m
controllers/balancing_with_opt_of_tau_and_QP_for_contact_wrenches/: balancingController_QP_fromOnefoot_to_twoFeet.mdl  balancingController_QP_fromOnefoot_to_twoFeet.slx  balancingController_QP_oneFoot.mdl  balancingController_QP_oneFoot.slx  balancingController_QP_oneFoot_multiple_postures.mdl  balancingController_QP_oneFoot_multiple_postures.slx  balancingController_QP_twoFeet.mdl  controller.mdl  controllerQPsolver_balancingOneFoot.m  controllerQPsolver_balancingTwoFeet.m  desiredForceComputation.m  (+4 more)
doc/: model_guidelines.md
tests/: testVelocities.mdl
utilities/: calibrateIMU.mdl  calibrateIMU2012b.mdl  debugFT.mdl  debugFT2012b.mdl
(+1329 files in other folders)
